feat(new feature): j9 - new try with resoruces